02-cloudformation/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Cloudformation Rensyu

Parameters:
  LatestAMIId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64
    Description: Latest Amazon Linux 2023 AMI
  EnableNatGateway:
    Type: String
    Default: "false"
    AllowedValues:
      - "true"
      - "false"
    Description: Enable NAT Gateway
  EnableCloudWatch:
    Type: String
    Default: "false"
    AllowedValues:
      - "true"
      - "false"
    Description: Enable CloudWatch Agent

Conditions:
  CreateNatGateway:
    Fn::Equals:
      - !Ref EnableNatGateway
      - "true"
  CreateCloudWatch:
    Fn::And:
      - Fn::Equals:
          - !Ref EnableNatGateway
          - "true"
      - Fn::Equals:
          - !Ref EnableCloudWatch
          - "true"

Resources:
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: cfn-web-lab-vpc
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: ap-northeast-1a
      Tags:
        - Key: Name
          Value: cfn-web-lab-public-subnet-a
  PublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: ap-northeast-1c
      Tags:
        - Key: Name
          Value: cfn-web-lab-public-subnet-c
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: ap-northeast-1a
      Tags:
        - Key: Name
          Value: cfn-web-lab-private-subnet-a
  PrivateSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: ap-northeast-1c
      Tags:
        - Key: Name
          Value: cfn-web-lab-private-subnet-c
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: cfn-web-lab-igw
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: cfn-web-lab-public-rt
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetC
      RouteTableId: !Ref PublicRouteTable
  PrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: cfn-web-lab-private-rt-a
  PrivateRouteA:
    Type: AWS::EC2::Route
    Condition: CreateNatGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayA
  PrivateSubnetARouteTableAAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRouteTableA
  PrivateRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: cfn-web-lab-private-rt-c
  PrivateRouteC:
    Type: AWS::EC2::Route
    Condition: CreateNatGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTableC
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayC
  PrivateSubnetCRouteTableCAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetC
      RouteTableId: !Ref PrivateRouteTableC
  NatGatewayEIPA:
    Type: AWS::EC2::EIP
    Condition: CreateNatGateway
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: cfn-web-lab-nat-eip-a
  NatGatewayA:
    Type: AWS::EC2::NatGateway
    Condition: CreateNatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIPA.AllocationId
      SubnetId: !Ref PublicSubnetA
      Tags:
        - Key: Name
          Value: cfn-web-lab-natgw-a
  NatGatewayEIPC:
    Type: AWS::EC2::EIP
    Condition: CreateNatGateway
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: cfn-web-lab-nat-eip-c
  NatGatewayC:
    Type: AWS::EC2::NatGateway
    Condition: CreateNatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIPC.AllocationId
      SubnetId: !Ref PublicSubnetC
      Tags:
        - Key: Name
          Value: cfn-web-lab-natgw-c
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for ALB
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: cfn-web-lab-alb-sg
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Web Server
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: cfn-web-lab-web-sg
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref ALBSecurityGroup
  WebServerRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: cfn-web-lab-web-ec2-role
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
      Policies:
        - PolicyName: S3ReadIndexHtmlPolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - s3:ListBucket
                Resource:
                  - arn:aws:s3:::web-lab-s3-example-bucket
              - Effect: Allow
                Action:
                  - s3:GetObject
                Resource:
                  - arn:aws:s3:::web-lab-s3-example-bucket/*
  WebServerInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref WebServerRole
  WebServerInstanceA:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAMIId
      InstanceType: t3.micro
      SubnetId: !Ref PrivateSubnetA
      SecurityGroupIds:
        - !Ref WebSecurityGroup
      IamInstanceProfile: !Ref WebServerInstanceProfile
      UserData:
        !Base64 |
          #!/bin/bash
          dnf update -y
          dnf install -y nginx
          aws s3 cp \
            s3://web-lab-s3-example-bucket/server-a/index.html \
            /usr/share/nginx/html/index.html
          systemctl enable nginx
          systemctl start nginx
          dnf install -y amazon-cloudwatch-agent
          systemctl enable amazon-cloudwatch-agent
          /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl \
            -a fetch-config \
            -m ec2 \
            -c ssm:/web-lab/cloudwatch-agent/config \
            -s
      Tags:
        - Key: Name
          Value: cfn-web-lab-web-ec2-a
  WebServerInstanceC:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAMIId
      InstanceType: t3.micro
      SubnetId: !Ref PrivateSubnetC
      SecurityGroupIds:
        - !Ref WebSecurityGroup
      IamInstanceProfile: !Ref WebServerInstanceProfile
      UserData:
        !Base64 |
          #!/bin/bash
          dnf update -y
          dnf install -y nginx
          aws s3 cp \
            s3://web-lab-s3-example-bucket/server-c/index.html \
            /usr/share/nginx/html/index.html
          systemctl enable nginx
          systemctl start nginx
          dnf install -y amazon-cloudwatch-agent
          systemctl enable amazon-cloudwatch-agent
          /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl \
            -a fetch-config \
            -m ec2 \
            -c ssm:/web-lab/cloudwatch-agent/config \
            -s
      Tags:
        - Key: Name
          Value: cfn-web-lab-web-ec2-c
  NginxAccessLogGroup:
    Type: AWS::Logs::LogGroup
    Condition: CreateCloudWatch
    Properties:
      LogGroupName: /aws/ec2/nginx/access
      RetentionInDays: 7
  NginxErrorLogGroup:
    Type: AWS::Logs::LogGroup
    Condition: CreateCloudWatch
    Properties:
      LogGroupName: /aws/ec2/nginx/error
      RetentionInDays: 7     
  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: cfn-web-lab-alb
      Scheme: internet-facing
      Type: application
      Subnets:
        - !Ref PublicSubnetA
        - !Ref PublicSubnetC
      SecurityGroups:
        - !Ref ALBSecurityGroup
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: cfn-web-lab-tg
      VpcId: !Ref MyVPC
      Protocol: HTTP
      Port: 80
      TargetType: instance
      Targets:
        - Id: !Ref WebServerInstanceA
          Port: 80
        - Id: !Ref WebServerInstanceC
          Port: 80
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup
Outputs:
  VpcId:
    Description: VPC ID
    Value: !Ref MyVPC
  WebServerInstanceAId:
    Description: Web Instance ID
    Value: !Ref WebServerInstanceA
  WebServerInstanceCId:
    Description: Web Instance ID
    Value: !Ref WebServerInstanceC
